Fix text alignment

--- a/app/styles/drawers.less
+++ b/app/styles/drawers.less
@@ -56,11 +56,11 @@
 .track-menu-entry {
   .menu-entry;
 
+  float: right;
   text-align: right;
   align-self: right;
   align-content: right;
 
-  padding-left: 0.5vw;
   line-height: 4.5vh;
 }
 
