--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7819,10 +7819,10 @@ right-words {
 .track-menu-entry {
   font-weight: 700;
   letter-spacing: 0.15em;
+  float: right;
   text-align: right;
   align-self: right;
   align-content: right;
-  padding-left: 0.5vw;
   line-height: 4.5vh;
 }
 .story-menu-entry {
